--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #1e1e1e;
-      color: #ffffff;
+      background-color: #f0f0f0;
+      color: #333;
       margin: 0;
       padding: 0;
     }
@@ -16,20 +16,22 @@
       max-width: 1300px;
       margin: 20px auto;
       padding: 20px;
-      background: #2c2c2c;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      background: #ffffff;
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
     }
     .header {
       text-align: center;
-      font-size: 26px;
+      font-size: 28px;
       font-weight: bold;
       margin-bottom: 10px;
+      color: #2c3e50; /* Color más sobrio */
     }
     .timer {
       text-align: center;
       font-size: 18px;
       margin-bottom: 20px;
+      color: #666;
     }
     .dashboard {
       display: grid;
@@ -41,10 +43,10 @@
       padding: 20px;
       border-radius: 10px;
       text-align: center;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
       color: white;
-      background: linear-gradient(135deg, rgba(255, 255, 255, 0.2) 30%, transparent 100%);
+      background: linear-gradient(135deg, #c0392b 30%, #e74c3c 100%);
     }
     .card:hover {
       transform: scale(1.05);
@@ -59,7 +61,7 @@
     .table-container {
       margin-top: 20px;
       padding: 10px;
-      background: #333;
+      background: #f9f9f9;
       border-radius: 10px;
     }
     table {
@@ -68,11 +70,12 @@
     }
     th, td {
       padding: 10px;
-      border-bottom: 1px solid #444;
+      border-bottom: 1px solid #ddd;
       text-align: center;
     }
     th {
-      background: #555;
+      background: #c0392b;
+      color: #fff;
     }
   </style>
 </head>
